projektplaneringen, dokumentionen utökad. även lite design.

--- a/slutprojekt/prototyp/index.html
+++ b/slutprojekt/prototyp/index.html
@@ -15,10 +15,10 @@
         <div>
             <ul class="navbar">
                 <li>
-                    <a href="#">test link</a>
+                    <a href="about.html">Om det här</a>
                 </li>
                 <li>
-                    <a href="#">test link</a>
+                    <a href="#">Kontakta</a>
                 </li>
                 <li>
                     <a href="#">test link</a>
