--- a/slutprojekt/prototyp/index.html
+++ b/slutprojekt/prototyp/index.html
@@ -12,7 +12,7 @@
         <div id="logo">
             <h1 style="color:red;">FOOD</h1>
         </div>
-        <div>
+        <div id="navbar">
             <ul class="navbar">
                 <li>
                     <a href="about.html">Om det här</a>
@@ -27,6 +27,9 @@
                     <a href="#">test link</a>
                 </li>
             </ul>
+        </div>
+        <div id="profile-options">
+            PROFIL
         </div>
             
     </header>
