--- a/slutprojekt/prototyp/index.html
+++ b/slutprojekt/prototyp/index.html
@@ -50,7 +50,11 @@
             <form action="" method="post">
                 <input id="search-bar" type="text" placeholder="Search...">
             </form>
+            <div class="search-result">
+                <span>Results: XXX</span>
+            </div>
         </div>
+
         <!-- När användaren söker så ska bara x antal visas och så ska man ha möjligheten att klicka på en mer knapp för att ladda in fler -->
         <div class="card">
             <p>Här kommer listan med produkter komma när du söker i form av "cards"</p>
@@ -71,6 +75,10 @@
         <div class="card">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus esse perspiciatis iusto voluptatum sit et sint est quidem, ratione atque beatae quaerat! At, eos in voluptatum illum quas soluta optio.</p>
         </div> 
+
+        <div>
+            Pagnition [Show more]
+        </div>
     </section>
     
     <section id="footer">
